releasing package ubuntu-release-upgrader version 1:20.10.2

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-ubuntu-release-upgrader (1:20.10.2) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:20.10.2) groovy; urgency=medium
 
   * debian/91-release-upgrade: exit 0 if run as a non-root user.
     (LP: #1873545)
   * Only pass the package name to apport in the event that there is a dpkg
     error during a distribution upgrade. (LP: #1884148)
 
- -- Brian Murray <brian@ubuntu.com>  Wed, 24 Jun 2020 11:29:31 -0700
+ -- Brian Murray <brian@ubuntu.com>  Wed, 24 Jun 2020 11:34:11 -0700
 
 ubuntu-release-upgrader (1:20.10.1) groovy; urgency=medium
 
