Use ubuntu-archive-keyring to verify upgrades, irrespective of how apt-key is configured.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:20.10.2ubuntu1) UNRELEASED; urgency=medium
+
+  * Use ubuntu-archive-keyring to verify upgrades, irrespective of how
+    apt-key is configured.
+
+ -- Dimitri John Ledkov <xnox@ubuntu.com>  Tue, 30 Jun 2020 16:37:43 +0100
+
 ubuntu-release-upgrader (1:20.10.2) groovy; urgency=medium
 
   * debian/91-release-upgrade: exit 0 if run as a non-root user.
