utils/demotions.py: also use the ubuntu-archive-keyring when determining packages that were demoted.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,14 @@
-ubuntu-release-upgrader (1:20.10.2ubuntu1) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:20.10.3) groovy; urgency=medium
 
+  [ Dimitri John Ledkov ]
   * Use ubuntu-archive-keyring to verify upgrades, irrespective of how
     apt-key is configured.
 
- -- Dimitri John Ledkov <xnox@ubuntu.com>  Tue, 30 Jun 2020 16:37:43 +0100
+  [ Brian Murray ]
+  * utils/demotions.py: also use the ubuntu-archive-keyring when determining
+    packages that were demoted.
+
+ -- Brian Murray <brian@ubuntu.com>  Tue, 30 Jun 2020 09:15:09 -0700
 
 ubuntu-release-upgrader (1:20.10.2) groovy; urgency=medium
 
