--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-release-upgrader (1:20.04.21) UNRELEASED; urgency=medium
+
+  * debian/91-release-upgrade: make it work in dash. (LP: #1873545)
+
+ -- Brian Murray <brian@ubuntu.com>  Mon, 06 Jul 2020 08:41:57 -0700
+
 ubuntu-release-upgrader (1:20.04.20) focal; urgency=medium
 
   * debian/91-release-upgrade: exit 0 if run as a non-root user.
