DistUpgrade/DistUpgradeController.py: set a default value for devRelease all the time. (LP: #1882069)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+ubuntu-release-upgrader (1:20.04.22) UNRELEASED; urgency=medium
+
+  * DistUpgrade/DistUpgradeController.py: set a default value for devRelease
+    all the time. (LP: #1882069)
+  * DistUpgrade/DistUpgradeQuirks.py: Update the quirk for handling the
+    transition from python-minimal to python2-minimal so that it runs during a
+    prepare stage and an install stage. Thanks to Lukas Märdian for the fix.
+    (LP: #1875523)
+
+ -- Brian Murray <brian@ubuntu.com>  Fri, 17 Jul 2020 13:54:16 -0700
+
 ubuntu-release-upgrader (1:20.04.21) focal; urgency=medium
 
   * debian/91-release-upgrade: make it work in dash. (LP: #1873545)
