--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:20.10.5) UNRELEASED; urgency=medium
+
+  * DistUpgrade/DistUpgradeController.py: set a default value for devRelease
+    all the time. (LP: #1882069)
+
+ -- Brian Murray <brian@ubuntu.com>  Thu, 09 Jul 2020 14:32:01 -0700
+
 ubuntu-release-upgrader (1:20.10.4) groovy; urgency=medium
 
   * debian/91-release-upgrade: make it work in dash.
