--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:20.10.6) UNRELEASED; urgency=medium
+
+  * data/DistUpgrade.cfg: remove xscreensaver from the PostUpgradeRemove rule
+    for ubuntu-desktop as it is no longer necessary. (LP: #1875107)
+
+ -- Brian Murray <brian@ubuntu.com>  Mon, 20 Jul 2020 17:06:03 -0700
+
 ubuntu-release-upgrader (1:20.10.5) groovy; urgency=medium
 
   * DistUpgrade/DistUpgradeController.py: set a default value for devRelease
