--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-release-upgrader (1:20.10.7) UNRELEASED; urgency=medium
+
+  * Resolve pycodestyle E741 issues.
+
+ -- Brian Murray <brian@ubuntu.com>  Thu, 23 Jul 2020 09:09:00 -0700
+
 ubuntu-release-upgrader (1:20.10.6) groovy; urgency=medium
 
   * data/DistUpgrade.cfg: remove xscreensaver from the PostUpgradeRemove rule
