--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-ubuntu-release-upgrader (1:20.10.7) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:20.10.7) groovy; urgency=medium
 
   * Resolve pycodestyle E741 issues.
 
- -- Brian Murray <brian@ubuntu.com>  Thu, 23 Jul 2020 09:09:00 -0700
+ -- Brian Murray <brian@ubuntu.com>  Thu, 23 Jul 2020 09:10:00 -0700
 
 ubuntu-release-upgrader (1:20.10.6) groovy; urgency=medium
 
