DistUpgrade/DistUpgradeCache.py: Ensure that the linux metapackage is never removed during a distribution upgrade. (LP: #1889449)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:20.10.8) UNRELEASED; urgency=medium
+
+  * DistUpgrade/DistUpgradeCache.py: Ensure that the linux metapackage is
+    never removed during a distribution upgrade. (LP: #1889449)
+
+ -- Brian Murray <brian@ubuntu.com>  Fri, 31 Jul 2020 11:16:41 -0700
+
 ubuntu-release-upgrader (1:20.10.7) groovy; urgency=medium
 
   * Resolve pycodestyle E741 issues.
