--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:20.10.9) UNRELEASED; urgency=medium
+
+  * DistUpgrade/DistUpgradeQuirks.py: In addition to quirking python-minimal
+    we also need to quirk python-dbg. (LP: #1887544)
+
+ -- Brian Murray <brian@ubuntu.com>  Fri, 31 Jul 2020 12:55:41 -0700
+
 ubuntu-release-upgrader (1:20.10.8) groovy; urgency=medium
 
   * DistUpgrade/DistUpgradeCache.py: Ensure that the linux metapackage is
