--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+ubuntu-release-upgrader (1:20.10.9) UNRELEASED; urgency=medium
+
+  * DistUpgrade/DistUpgradeQuirks.py: Add a check for ROS packages being
+    installed and warn that upgrades with them installed are not likely to
+    work. Thanks to Kyle Fazzari for the patch. (LP: #1611737)
+
+ -- Brian Murray <brian@ubuntu.com>  Fri, 14 Aug 2020 10:24:25 -0700
+
 ubuntu-release-upgrader (1:20.10.8) groovy; urgency=medium
 
   * DistUpgrade/DistUpgradeCache.py: Ensure that the linux metapackage is
