DistUpgrade/DistUpgradeController.py: do what the comment says and really back up /etc/apt/sources.list first. (LP: #1888916)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:20.10.10) UNRELEASED; urgency=medium
+
+  * DistUpgrade/DistUpgradeController.py: do what the comment says and really
+    back up /etc/apt/sources.list first. (LP: #1888916)
+
+ -- Brian Murray <brian@ubuntu.com>  Tue, 25 Aug 2020 14:04:59 -0700
+
 ubuntu-release-upgrader (1:20.10.9) groovy; urgency=medium
 
   * DistUpgrade/DistUpgradeQuirks.py: Add a check for ROS packages being
