--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,11 @@
-ubuntu-release-upgrader (1:20.10.10) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:20.10.10) groovy; urgency=medium
 
   * DistUpgrade/DistUpgradeController.py: do what the comment says and really
     back up /etc/apt/sources.list first. (LP: #1888916)
+  * DistUpgrade/screenrc: add 'onerror' to the zombie command so that if the
+    process exits normally the screen window will disappear.
 
- -- Brian Murray <brian@ubuntu.com>  Tue, 25 Aug 2020 14:04:59 -0700
+ -- Brian Murray <brian@ubuntu.com>  Tue, 25 Aug 2020 14:14:33 -0700
 
 ubuntu-release-upgrader (1:20.10.9) groovy; urgency=medium
 
