--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:20.10.11) UNRELEASED; urgency=medium
+
+  * data/release-upgrades: set Prompt to normal as groovy is not an LTS
+    release.
+
+ -- Brian Murray <brian@ubuntu.com>  Mon, 31 Aug 2020 13:33:04 -0700
+
 ubuntu-release-upgrader (1:20.10.10) groovy; urgency=medium
 
   * DistUpgrade/DistUpgradeController.py: do what the comment says and really
