--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,9 @@ ubuntu-release-upgrader (1:20.10.11) UNRELEASED; urgency=medium
 
   * data/release-upgrades: set Prompt to normal as groovy is not an LTS
     release.
+  * data/mirrors.cfg: add all ubuntu-advantage services as valid mirrors.
+    This includes: fips, fips-updates, esm-infra, esm-apps and cc-eal.
+    (LP: #1893717)
 
  -- Brian Murray <brian@ubuntu.com>  Mon, 31 Aug 2020 13:33:04 -0700
 
