debian/changelog: update version 1:20.04.26 for release

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+ubuntu-release-upgrader (1:20.04.26) focal; urgency=medium
+
+  * data/mirrors.cfg: add all ubuntu-advantage services as valid mirrors.
+    This includes: fips, fips-updates, esm-infra, esm-apps and cc-eal.
+    (LP: #1893717)
+
+ -- Chad Smith <chad.smith@canonical.com>  Wed, 02 Sep 2020 15:21:39 -0600
+
 ubuntu-release-upgrader (1:20.04.25) focal; urgency=medium
 
   * DistUpgrade/DistUpgradeQuirks.py: Add a check for ROS packages being
