--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+ubuntu-release-upgrader (1:20.10.12) groovy; urgency=medium
+
+  [ Chad Smith ]
+  * data/mirrors.cfg: add ubuntu advantage pro PPA url as valid mirror
+    (LP: #1893717)
+  * DistUpgrade/DistUpgradeController.py: release cache lock during
+    runPostInstallScripts (LP: #1893717)
+
+ -- Chad Smith <chad.smith@canonical.com>  Tue, 22 Sep 2020 16:59:52 -0600
+
 ubuntu-release-upgrader (1:20.10.11) groovy; urgency=medium
 
   [ Brian Murray ]
