--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+ubuntu-release-upgrader (1:20.10.12ubuntu1) UNRELEASED; urgency=medium
+
+  * DistUpgrade/DistUpgradeQuirks.py: Replace python-dev with
+    python-dev-is-python2 rather than with nothing as that is a better upgrade
+    path. (LP: #1887544)
+
+ -- Brian Murray <brian@ubuntu.com>  Tue, 06 Oct 2020 11:58:17 -0700
+
 ubuntu-release-upgrader (1:20.10.12) groovy; urgency=medium
 
   [ Chad Smith ]
