--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:20.10.13) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:20.10.13) groovy; urgency=medium
 
   * DistUpgrade/DistUpgradeQuirks.py: Replace python-dev with
     python-dev-is-python2 rather than with nothing as that is a better upgrade
@@ -7,7 +7,7 @@ ubuntu-release-upgrader (1:20.10.13) UNRELEASED; urgency=medium
     Change the window label from 20.04 to 20.10. (LP: #1901377)
   * Update mirrors and demotions.
 
- -- Brian Murray <brian@ubuntu.com>  Mon, 26 Oct 2020 10:28:25 -0700
+ -- Brian Murray <brian@ubuntu.com>  Mon, 26 Oct 2020 10:41:49 -0700
 
 ubuntu-release-upgrader (1:20.10.12) groovy; urgency=medium
 
