--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-ubuntu-release-upgrader (1:20.10.12ubuntu1) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:21.04.1) UNRELEASED; urgency=medium
 
   * DistUpgrade/DistUpgradeQuirks.py: Replace python-dev with
     python-dev-is-python2 rather than with nothing as that is a better upgrade
     path. (LP: #1887544)
+  * Update for 20.10 -> 21.04.
 
  -- Brian Murray <brian@ubuntu.com>  Tue, 06 Oct 2020 11:58:17 -0700
 
