DistUpgrade/DistUpgradeQuirks.py: ensure there are matches for both regexs before trying to use them.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:21.04.2) UNRELEASED; urgency=medium
+
+  * DistUpgrade/DistUpgradeQuirks.py: ensure there are matches for both regexs
+    before trying to use them.
+
+ -- Brian Murray <brian@ubuntu.com>  Mon, 09 Nov 2020 10:11:37 -0800
+
 ubuntu-release-upgrader (1:21.04.1) hirsute; urgency=medium
 
   * DistUpgrade/DistUpgradeQuirks.py: Replace python-dev with
