--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,9 @@ ubuntu-release-upgrader (1:21.04.2) UNRELEASED; urgency=medium
 
   * DistUpgrade/DistUpgradeQuirks.py: ensure there are matches for both regexs
     before trying to use them.
+  * DistUpgrade/dist-upgrade.py: When running the release upgrade do not add
+    user site directory to sys.path thereby preventing user python packages
+    from interfering with the upgrade process. (LP: #1848829)
 
  -- Brian Murray <brian@ubuntu.com>  Mon, 09 Nov 2020 10:11:37 -0800
 
