Remove code relevant to peforming a distribution upgrade with a "cdrom" of the release to which you are upgrading as it has been hidden and broken for quite some time.

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,9 @@ ubuntu-release-upgrader (1:21.04.2) UNRELEASED; urgency=medium
   * DistUpgrade/dist-upgrade.py: When running the release upgrade do not add
     user site directory to sys.path thereby preventing user python packages
     from interfering with the upgrade process. (LP: #1848829)
+  * Remove code relevant to peforming a distribution upgrade with a "cdrom" of
+    the release to which you are upgrading as it has been hidden and broken
+    for quite some time.
 
  -- Brian Murray <brian@ubuntu.com>  Mon, 09 Nov 2020 10:11:37 -0800
 
