releasing package ubuntu-release-upgrader version 1:21.04.2

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:21.04.2) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:21.04.2) hirsute; urgency=medium
 
   * DistUpgrade/DistUpgradeQuirks.py: ensure there are matches for both regexs
     before trying to use them.
@@ -9,7 +9,7 @@ ubuntu-release-upgrader (1:21.04.2) UNRELEASED; urgency=medium
     the release to which you are upgrading as it has been hidden and broken
     for quite some time.
 
- -- Brian Murray <brian@ubuntu.com>  Mon, 09 Nov 2020 10:11:37 -0800
+ -- Brian Murray <brian@ubuntu.com>  Mon, 09 Nov 2020 11:20:25 -0800
 
 ubuntu-release-upgrader (1:21.04.1) hirsute; urgency=medium
 
