--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+ubuntu-release-upgrader (1:20.04.29) UNRELEASED; urgency=medium
+
+  * DistUpgrade/dist-upgrade.py: When running the release upgrade do not add
+    user site directory to sys.path thereby preventing user python packages
+    from interfering with the upgrade process. (LP: #1848829)
+
+ -- Brian Murray <brian@ubuntu.com>  Tue, 17 Nov 2020 15:25:20 -0800
+
 ubuntu-release-upgrader (1:20.04.28) focal; urgency=medium
 
   [ Brian Murray ]
