Adapt to Ubuntu archive URL change to due to template unification in python-apt (>= 2.1.5); update build-depends accordingly.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:21.04.3) UNRELEASED; urgency=medium
+
+  * Adapt to Ubuntu archive URL change to due to template unification in
+    python-apt (>= 2.1.5); update build-depends accordingly.
+
+ -- Julian Andres Klode <juliank@ubuntu.com>  Thu, 17 Dec 2020 10:09:03 +0100
+
 ubuntu-release-upgrader (1:21.04.2) hirsute; urgency=medium
 
   * DistUpgrade/DistUpgradeQuirks.py: ensure there are matches for both regexs
