--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-ubuntu-release-upgrader (1:21.04.3) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:21.04.3) hirsute; urgency=medium
 
   * Adapt to Ubuntu archive URL change to due to template unification in
     python-apt (>= 2.1.5); update build-depends accordingly.
 
- -- Julian Andres Klode <juliank@ubuntu.com>  Thu, 17 Dec 2020 10:09:03 +0100
+ -- Julian Andres Klode <juliank@ubuntu.com>  Thu, 17 Dec 2020 10:10:14 +0100
 
 ubuntu-release-upgrader (1:21.04.2) hirsute; urgency=medium
 
