--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-release-upgrader (1:21.04.4) hirsute; urgency=medium
+
+  * Run old tests on amd64 so ports that did not exist back then work
+
+ -- Julian Andres Klode <juliank@ubuntu.com>  Mon, 11 Jan 2021 11:53:47 +0100
+
 ubuntu-release-upgrader (1:21.04.3) hirsute; urgency=medium
 
   * Adapt to Ubuntu archive URL change to due to template unification in
