--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-release-upgrader (1:20.04.30) focal; urgency=medium
+
+  * data/mirrors.cfg: update mirrors for the 20.04.2 point release.
+
+ -- Brian Murray <brian@ubuntu.com>  Tue, 19 Jan 2021 13:47:45 -0800
+
 ubuntu-release-upgrader (1:20.04.29) focal; urgency=medium
 
   * DistUpgrade/dist-upgrade.py: When running the release upgrade do not add
