--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:21.04.5) hirsute; urgency=medium
+
+  * Add quirk to block upgrade if docker containers have support for
+    aufs storage-driver (LP: #1907713)
+
+ -- William 'jawn-smith' Wilson <william.wilson@canonical.com>  Mon, 22 Feb 2021 16:16:48 -0600
+
 ubuntu-release-upgrader (1:21.04.4) hirsute; urgency=medium
 
   * Run old tests on amd64 so ports that did not exist back then work
