Setting release version to UNRELEASED

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:21.04.5) hirsute; urgency=medium
+ubuntu-release-upgrader (1:21.04.5) UNRELEASED; urgency=medium
 
   * Add quirk to block upgrade if docker containers have support for
     aufs storage-driver (LP: #1907713)
