Changing wording to make the aufs changes clearer

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 ubuntu-release-upgrader (1:21.04.5) UNRELEASED; urgency=medium
 
-  * Add quirk to block upgrade if docker containers have support for
+  * Add quirk to block upgrade if docker containers are configured to use the
     aufs storage-driver (LP: #1907713)
 
  -- William 'jawn-smith' Wilson <william.wilson@canonical.com>  Mon, 22 Feb 2021 16:16:48 -0600
