--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:21.04.5) UNRELEASED; urgency=medium
+
+  * DistUpgrade/DistUpgradeController.py: restore sources.list where possible
+    if a KeyboardInterrupt event is received. (LP: #1898026)
+
+ -- Brian Murray <brian@ubuntu.com>  Fri, 26 Feb 2021 10:53:11 -0800
+
 ubuntu-release-upgrader (1:21.04.4) hirsute; urgency=medium
 
   * Run old tests on amd64 so ports that did not exist back then work
