releasing package ubuntu-release-upgrader version 1:21.04.5

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:21.04.5) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:21.04.5) hirsute; urgency=medium
 
   [ William 'jawn-smith' Wilson ]
   * Add quirk to block upgrade if docker containers are configured to use the
@@ -11,7 +11,7 @@ ubuntu-release-upgrader (1:21.04.5) UNRELEASED; urgency=medium
     gnome-session-inhibit to devnull so a message regarding Ctrl-C is not
     displayed.
 
- -- William 'jawn-smith' Wilson <william.wilson@canonical.com>  Mon, 22 Feb 2021 16:16:48 -0600
+ -- Brian Murray <brian@ubuntu.com>  Fri, 26 Feb 2021 11:27:39 -0800
 
 ubuntu-release-upgrader (1:21.04.4) hirsute; urgency=medium
 
