--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+ubuntu-release-upgrader (1:21.04.6) UNRELEASED; urgency=medium
+
+  * DistUpgrade/DistUpgradeController.py: If there is a sources.list entry for
+    an arch which is on ports.ubuntu.com rewrite the uri so that ports is
+    used. (LP: #1917220)
+
+ -- Brian Murray <brian@ubuntu.com>  Tue, 02 Mar 2021 13:57:48 -0800
+
 ubuntu-release-upgrader (1:21.04.5) hirsute; urgency=medium
 
   [ William 'jawn-smith' Wilson ]
