--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:21.04.6) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:21.04.6) hirsute; urgency=medium
 
   * DistUpgrade/DistUpgradeController.py: If there is a sources.list entry for
     an arch which is on ports.ubuntu.com rewrite the uri so that ports is
@@ -8,7 +8,7 @@ ubuntu-release-upgrader (1:21.04.6) UNRELEASED; urgency=medium
     resolving a host of upgrade failures. Thanks to Julian for the initial
     patch. (LP: #1898152)
 
- -- Brian Murray <brian@ubuntu.com>  Wed, 31 Mar 2021 09:18:47 -0700
+ -- Brian Murray <brian@ubuntu.com>  Wed, 31 Mar 2021 09:25:55 -0700
 
 ubuntu-release-upgrader (1:21.04.5) hirsute; urgency=medium
 
