DistUpgrade/DistUpgradeQuirks.py:  use apt's problem resolver to better calculate upgrades where python is replaced by python-is-python2 thereby resolving a host of upgrade failures. Thanks to Julian for the initial patch. (LP: #1898152)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+ubuntu-release-upgrader (1:20.04.31) focal; urgency=medium
+
+  * DistUpgrade/DistUpgradeQuirks.py:  use apt's problem resolver to better
+    calculate upgrades where python is replaced by python-is-python2 thereby
+    resolving a host of upgrade failures. Thanks to Julian for the initial
+    patch. (LP: #1898152)
+
+ -- Brian Murray <brian@ubuntu.com>  Wed, 31 Mar 2021 10:05:14 -0700
+
 ubuntu-release-upgrader (1:20.04.30) focal; urgency=medium
 
   * data/mirrors.cfg: update mirrors for the 20.04.2 point release.
