--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+ubuntu-release-upgrader (1:21.04.8) UNRELEASED; urgency=medium
+
+  * DistUpgrade/DistUpgradeQuirks.py: Modify the deb-to-snap quirk to also
+    upgrade preseeded snaps to latest/stable/ubuntu-$version for their new
+    release. (LP: #1922297)
+
+ -- Brian Murray <brian@ubuntu.com>  Mon, 12 Apr 2021 13:48:07 -0700
+
 ubuntu-release-upgrader (1:21.04.7) hirsute; urgency=medium
 
   * DistUpgrade/DistUpgradeController.py: Only rewrite archive.u.c and
