tests/test_quirks.py: update the snap tests for the above changes.

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ ubuntu-release-upgrader (1:21.04.8) UNRELEASED; urgency=medium
   * DistUpgrade/DistUpgradeQuirks.py: Modify the deb-to-snap quirk to also
     upgrade preseeded snaps to latest/stable/ubuntu-$version for their new
     release. (LP: #1922297)
+  * tests/test_quirks.py: update the snap tests for the above changes.
 
  -- Brian Murray <brian@ubuntu.com>  Mon, 12 Apr 2021 13:48:07 -0700
 
