--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+ubuntu-release-upgrader (1:20.04.32) UNRELEASED; urgency=medium
+
+  * DistUpgrade/DistUpgradeQuirks.py: Modify the deb-to-snap quirk to also
+     upgrade preseeded snaps to latest/stable/ubuntu-$version for their new
+     release. (LP: #1922297)
+
+ -- Brian Murray <brian@ubuntu.com>  Tue, 13 Apr 2021 11:35:32 -0700
+
 ubuntu-release-upgrader (1:20.04.31) focal; urgency=medium
 
   * DistUpgrade/DistUpgradeQuirks.py:  use apt's problem resolver to better
