--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+ubuntu-release-upgrader (1:20.10.15) groovy; urgency=medium
+
+  * DistUpgrade/DistUpgradeQuirks.py: Modify the deb-to-snap quirk to also
+    upgrade preseeded snaps to latest/stable/ubuntu-$version for their new
+    release. (LP: #1922297)
+
+ -- Brian Murray <brian@ubuntu.com>  Tue, 13 Apr 2021 10:49:16 -0700
+
 ubuntu-release-upgrader (1:20.10.14) groovy; urgency=medium
 
   * DistUpgrade/dist-upgrade.py: When running the release upgrade do not add
