Add quirk to migrate FKMS overlay to KMS for raspi users
The Raspberry Pi FKMS ("fake" KMS) overlay needs to be replaced with the
KMS overlay ("full" KMS) for correct desktop function under Wayland.
We've been advised there *may* be display incompatibilities with the
camera firmware under this setup, so configuration lines enabling the
camera ("start_x=1") should also be disabled.

Finally, because the camera is disabled, and the GPU is (largely) under
the control of the kernel under this setup, any GPU memory allocation
lines ("gpu_mem=128") should be disabled to revert to the default (64MB)
GPU memory split.

LP: #1923673

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+ubuntu-release-upgrader (1:21.04.9) hirsute; urgency=medium
+
+  * DistUpgrade/DistUpgradeQuirks.py: Add quirk to rewrite references to fkms
+    overlay in Raspberry Pi boot configuration to kms overlay (and disable the
+    related camera firmware lines). (LP: #1923673)
+
+ -- Dave Jones <dave.jones@canonical.com>  Tue, 13 Apr 2021 23:34:22 +0100
+
 ubuntu-release-upgrader (1:21.04.8) hirsute; urgency=medium
 
   * DistUpgrade/DistUpgradeQuirks.py: Modify the deb-to-snap quirk to also
