--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:21.04.9) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:21.04.9) hirsute; urgency=medium
 
   [ Dave Jones ]
   * DistUpgrade/DistUpgradeQuirks.py: Add quirk to rewrite references to fkms
@@ -8,7 +8,7 @@ ubuntu-release-upgrader (1:21.04.9) UNRELEASED; urgency=medium
   [ Brian Murray ]
   * Run pre-build.sh: updating mirrors, demotions, and translations.
 
- -- Dave Jones <dave.jones@canonical.com>  Tue, 13 Apr 2021 23:34:22 +0100
+ -- Brian Murray <brian@ubuntu.com>  Thu, 15 Apr 2021 09:29:00 -0700
 
 ubuntu-release-upgrader (1:21.04.8) hirsute; urgency=medium
 
