DistUpgrade/DistUpgradeQuirks.py: look for the proper package name in the cache. (LP: #1924793)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:21.04.10) UNRELEASED; urgency=medium
+
+  * DistUpgrade/DistUpgradeQuirks.py: look for the proper package name in the
+    cache. (LP: #1924793)
+
+ -- Brian Murray <brian@ubuntu.com>  Fri, 16 Apr 2021 11:39:53 -0700
+
 ubuntu-release-upgrader (1:21.04.9) hirsute; urgency=medium
 
   [ Dave Jones ]
