--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-ubuntu-release-upgrader (1:21.04.10) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:21.04.10) hirsute; urgency=medium
 
   * DistUpgrade/DistUpgradeQuirks.py: look for the proper package name in the
     cache. (LP: #1924793)
   * Run pre-build.sh: updating mirrors, demotions, and translations.
 
- -- Brian Murray <brian@ubuntu.com>  Fri, 16 Apr 2021 11:51:56 -0700
+ -- Brian Murray <brian@ubuntu.com>  Fri, 16 Apr 2021 11:55:36 -0700
 
 ubuntu-release-upgrader (1:21.04.9) hirsute; urgency=medium
 
