--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:21.04.10ubuntu1) UNRELEASED; urgency=medium
+
+  * DistUpgrade/DevelReleaseAnnouncement: Add a statement recommending that
+    people do not upgrade to hirsute at this point in time.
+
+ -- Brian Murray <brian@ubuntu.com>  Wed, 21 Apr 2021 15:47:56 -0700
+
 ubuntu-release-upgrader (1:21.04.10) hirsute; urgency=medium
 
   * DistUpgrade/DistUpgradeQuirks.py: look for the proper package name in the
