--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+ubuntu-release-upgrader (1:20.04.33) UNRELEASED; urgency=medium
+
+  * DistUpgrade/DistUpgradeController.py: restore sources.list where possible
+    if a KeyboardInterrupt event is received and redirect the output of
+    gnome-session-inhibit to devnull so a message regarding Ctrl-C is not
+    displayed. (LP: #1898026)
+
+ -- Brian Murray <brian@ubuntu.com>  Mon, 26 Apr 2021 15:23:55 -0700
+
 ubuntu-release-upgrader (1:20.04.32) focal; urgency=medium
 
   * DistUpgrade/DistUpgradeQuirks.py: Modify the deb-to-snap quirk to also
