DistUpgrade/DistUpgradeController.py: restore sources.list where possible if a KeyboardInterrupt event is received and redirect the output of gnome-session-inhibit to devnull so a message regarding Ctrl-C is not displayed. (LP: #1898026)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+ubuntu-release-upgrader (1:20.10.16) UNRELEASED; urgency=medium
+
+  * DistUpgrade/DistUpgradeController.py: restore sources.list where possible
+    if a KeyboardInterrupt event is received and redirect the output of
+    gnome-session-inhibit to devnull so a message regarding Ctrl-C is not
+    displayed. (LP: #1898026)
+
+ -- Brian Murray <brian@ubuntu.com>  Fri, 14 May 2021 10:19:30 -0700
+
 ubuntu-release-upgrader (1:20.10.15) groovy; urgency=medium
 
   * DistUpgrade/DistUpgradeQuirks.py: Modify the deb-to-snap quirk to also
