--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-release-upgrader (1:21.10.1) UNRELEASED; urgency=medium
+
+  * Update for 21.04 -> 21.10.
+
+ -- Brian Murray <brian@ubuntu.com>  Wed, 28 Apr 2021 11:01:58 -0700
+
 ubuntu-release-upgrader (1:21.04.11) hirsute; urgency=medium
 
   * DistUpgrade/DevelReleaseAnnouncement: Add a statement recommending that
