--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:21.04.12) UNRELEASED; urgency=medium
+
+  * DistUpgrade/DevelReleaseAnnouncement: remove warning regarding upgrading
+    to hirsute.
+
+ -- Brian Murray <brian@ubuntu.com>  Tue, 11 May 2021 15:00:21 -0700
+
 ubuntu-release-upgrader (1:21.04.11) hirsute; urgency=medium
 
   * DistUpgrade/DevelReleaseAnnouncement: Add a statement recommending that
