--- a/debian/changelog
+++ b/debian/changelog
@@ -4,8 +4,10 @@ ubuntu-release-upgrader (1:20.04.33) UNRELEASED; urgency=medium
     if a KeyboardInterrupt event is received and redirect the output of
     gnome-session-inhibit to devnull so a message regarding Ctrl-C is not
     displayed. (LP: #1898026)
+  * DistUpgrade/DistUpgradeQuirks.py: Restore code which ensured the python
+    package was maked for removal. (LP: #1928397)
 
- -- Brian Murray <brian@ubuntu.com>  Mon, 26 Apr 2021 15:23:55 -0700
+ -- Brian Murray <brian@ubuntu.com>  Thu, 13 May 2021 16:04:49 -0700
 
 ubuntu-release-upgrader (1:20.04.32) focal; urgency=medium
 
