--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:20.04.33) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:20.04.33) focal; urgency=medium
 
   * DistUpgrade/DistUpgradeController.py: restore sources.list where possible
     if a KeyboardInterrupt event is received and redirect the output of
@@ -8,7 +8,7 @@ ubuntu-release-upgrader (1:20.04.33) UNRELEASED; urgency=medium
     package was maked for removal. (LP: #1928397)
   * Update mirrors and translations.
 
- -- Brian Murray <brian@ubuntu.com>  Thu, 13 May 2021 16:31:52 -0700
+ -- Brian Murray <brian@ubuntu.com>  Thu, 13 May 2021 16:38:41 -0700
 
 ubuntu-release-upgrader (1:20.04.32) focal; urgency=medium
 
