releasing package ubuntu-release-upgrader version 1:20.10.16

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:20.10.16) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:20.10.16) groovy; urgency=medium
 
   * DistUpgrade/DistUpgradeController.py: restore sources.list where possible
     if a KeyboardInterrupt event is received and redirect the output of
@@ -6,7 +6,7 @@ ubuntu-release-upgrader (1:20.10.16) UNRELEASED; urgency=medium
     displayed. (LP: #1898026)
   * Update mirrors, demotions, and translations.
 
- -- Brian Murray <brian@ubuntu.com>  Fri, 14 May 2021 10:19:30 -0700
+ -- Brian Murray <brian@ubuntu.com>  Fri, 14 May 2021 10:27:44 -0700
 
 ubuntu-release-upgrader (1:20.10.15) groovy; urgency=medium
 
