--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:21.10.2) UNRELEASED; urgency=medium
+
+  * DistUpgradeFetcherCore.py: when upgrading with the text view display the
+    release announcement in the terminal. (LP: #1925529)
+
+ -- Brian Murray <brian@ubuntu.com>  Fri, 21 May 2021 13:45:55 -0700
+
 ubuntu-release-upgrader (1:21.10.1) impish; urgency=medium
 
   * Update for 21.04 -> 21.10.
