--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ ubuntu-release-upgrader (1:21.10.2) UNRELEASED; urgency=medium
 
   * DistUpgradeFetcherCore.py: when upgrading with the text view display the
     release announcement in the terminal. (LP: #1925529)
+  * tests/test_dist_upgrade_fetcher_core.py: do not display the release
+    announcement during the test.
 
  -- Brian Murray <brian@ubuntu.com>  Fri, 21 May 2021 13:45:55 -0700
 
