--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:21.10.2) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:21.10.2) impish; urgency=medium
 
   * DistUpgradeFetcherCore.py: when upgrading with the text view display the
     release announcement in the terminal. (LP: #1925529)
@@ -6,7 +6,7 @@ ubuntu-release-upgrader (1:21.10.2) UNRELEASED; urgency=medium
     announcement during the test.
   * Run pre-build.sh: updating mirrors, demotions, and translations.
 
- -- Brian Murray <brian@ubuntu.com>  Fri, 21 May 2021 13:45:55 -0700
+ -- Brian Murray <brian@ubuntu.com>  Fri, 21 May 2021 15:43:16 -0700
 
 ubuntu-release-upgrader (1:21.10.1) impish; urgency=medium
 
