DistUpgradeQuirks.py: add in a method for reading the system vendor out of DMI information which then can be used to block upgrades. (LP: #1929449)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:21.10.2ubuntu1) UNRELEASED; urgency=medium
+
+  * DistUpgradeQuirks.py: add in a method for reading the system vendor out of
+    DMI information which then can be used to block upgrades. (LP: #1929449)
+
+ -- Brian Murray <brian@ubuntu.com>  Mon, 24 May 2021 10:36:19 -0700
+
 ubuntu-release-upgrader (1:21.10.2) impish; urgency=medium
 
   * DistUpgradeFetcherCore.py: when upgrading with the text view display the
