Fix package version

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:21.10.2ubuntu1) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:21.10.3) UNRELEASED; urgency=medium
 
   * DistUpgradeQuirks.py: add in a method for reading the system vendor out of
     DMI information which then can be used to block upgrades. (LP: #1929449)
