DistUpgradeFetcherCore.py: when upgrading with the text view display the release announcement in the terminal. (LP: #1925529)

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ ubuntu-release-upgrader (1:21.04.12) hirsute; urgency=medium
 
   * DistUpgrade/DevelReleaseAnnouncement: remove warning regarding upgrading
     to hirsute.
+  * DistUpgradeFetcherCore.py: when upgrading with the text view display the
+    release announcement in the terminal. (LP: #1925529)
   * Run pre-build.sh: updating mirrors, demotions, and translations.
 
  -- Brian Murray <brian@ubuntu.com>  Tue, 11 May 2021 15:03:04 -0700
