tests/test_dist_upgrade_fetcher_core.py: do not display the release announcement during the test.

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ ubuntu-release-upgrader (1:21.04.12) hirsute; urgency=medium
     to hirsute.
   * DistUpgradeFetcherCore.py: when upgrading with the text view display the
     release announcement in the terminal. (LP: #1925529)
+  * tests/test_dist_upgrade_fetcher_core.py: do not display the release
+    announcement during the test.
   * Run pre-build.sh: updating mirrors, demotions, and translations.
 
  -- Brian Murray <brian@ubuntu.com>  Tue, 11 May 2021 15:03:04 -0700
