tests/test_sources_list.py: switch from precise to focal and precise was removed from the archive.

--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,8 @@ ubuntu-release-upgrader (1:21.04.12) hirsute; urgency=medium
     release announcement in the terminal. (LP: #1925529)
   * tests/test_dist_upgrade_fetcher_core.py: do not display the release
     announcement during the test.
+  * tests/test_sources_list.py: switch from precise to focal and precise was
+    removed from the archive.
   * Run pre-build.sh: updating mirrors, demotions, and translations.
 
  -- Brian Murray <brian@ubuntu.com>  Tue, 11 May 2021 15:03:04 -0700
