--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:21.04.13) UNRELEASED; urgency=medium
+
+  * tests/test_sources_list.py: switch from precise to focal (for ports too!)
+    as precise was removed from the archive.
+
+ -- Brian Murray <brian@ubuntu.com>  Wed, 02 Jun 2021 15:54:08 -0700
+
 ubuntu-release-upgrader (1:21.04.12) hirsute; urgency=medium
 
   * DistUpgrade/DevelReleaseAnnouncement: remove warning regarding upgrading
