--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:21.10.4) UNRELEASED; urgency=medium
+
+  * DistUpgrade/DistUpgradeQuirks.py: log a message when we encounter an
+    unhandled error checking for snap store connectivity. (LP: #1930901)
+
+ -- Brian Murray <brian@ubuntu.com>  Fri, 04 Jun 2021 12:25:22 -0700
+
 ubuntu-release-upgrader (1:21.10.3) impish; urgency=medium
 
   * DistUpgradeQuirks.py: add in a method for reading the system vendor out of
