--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,12 @@
-ubuntu-release-upgrader (1:21.04.13) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:21.04.14) UNRELEASED; urgency=medium
 
   * tests/test_sources_list.py: switch from precise to focal (for ports too!)
     as precise was removed from the archive.
+  * DistUpgradeQuirks.py: only block upgrades for Apple hardware not all
+    hardware that doesn't have DMI information. Thanks to Alyssa Rowan for the
+    patch. (LP: #1931112)
 
- -- Brian Murray <brian@ubuntu.com>  Wed, 02 Jun 2021 15:54:08 -0700
+ -- Brian Murray <brian@ubuntu.com>  Mon, 07 Jun 2021 09:10:17 -0700
 
 ubuntu-release-upgrader (1:21.04.12) hirsute; urgency=medium
 
