tests/test_sources_list.py: use distro_info to set releases when performing some upgrade tests.

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ ubuntu-release-upgrader (1:21.10.4) UNRELEASED; urgency=medium
 
   * DistUpgrade/DistUpgradeQuirks.py: log a message when we encounter an
     unhandled error checking for snap store connectivity. (LP: #1930901)
+  * tests/test_sources_list.py: use distro_info to set releases when
+    performing some upgrade tests.
 
  -- Brian Murray <brian@ubuntu.com>  Fri, 04 Jun 2021 12:25:22 -0700
 
