DistUpgrade/DistUpgradeQuirks.py: disable the python is python2 quirk.
* DistUpgrade/DistUpgradeQuirks.py: disable the python is python2 quirk.
* DistUpgrade/DistUpgradeCache.py: switch to use finally in distUpgrade so
  that error messages in some quirks will be able to work.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,14 @@
-ubuntu-release-upgrader (1:21.10.4) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:21.10.4ubuntu1) UNRELEASED; urgency=medium
 
   * DistUpgrade/DistUpgradeQuirks.py: log a message when we encounter an
     unhandled error checking for snap store connectivity. (LP: #1930901)
   * tests/test_sources_list.py: use distro_info to set releases when
     performing some upgrade tests.
+  * DistUpgrade/DistUpgradeQuirks.py: disable the python is python2 quirk.
+  * DistUpgrade/DistUpgradeCache.py: switch to use finally in distUpgrade so
+    that error messages in some quirks will be able to work.
 
- -- Brian Murray <brian@ubuntu.com>  Fri, 04 Jun 2021 12:25:22 -0700
+ -- Brian Murray <brian@ubuntu.com>  Wed, 30 Jun 2021 16:11:19 -0700
 
 ubuntu-release-upgrader (1:21.10.3) impish; urgency=medium
 
