--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:21.10.4) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:21.10.4) impish; urgency=medium
 
   * DistUpgrade/DistUpgradeQuirks.py: log a message when we encounter an
     unhandled error checking for snap store connectivity. (LP: #1930901)
@@ -8,7 +8,7 @@ ubuntu-release-upgrader (1:21.10.4) UNRELEASED; urgency=medium
   * DistUpgrade/DistUpgradeCache.py: switch to use finally in distUpgrade so
     that error messages in some quirks will be able to work.
 
- -- Brian Murray <brian@ubuntu.com>  Wed, 30 Jun 2021 16:11:19 -0700
+ -- Brian Murray <brian@ubuntu.com>  Wed, 30 Jun 2021 16:24:08 -0700
 
 ubuntu-release-upgrader (1:21.10.3) impish; urgency=medium
 
