reenable the quirk (it was disabled in impish)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:20.04.34) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:20.04.34) focal; urgency=medium
 
   * DistUpgrade/DistUpgradeQuirks.py: If universe is not enabled and the
     upgrader is trying to transition from python to python2 produce an error
