update the changelog for test changes

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,9 @@ ubuntu-release-upgrader (1:20.04.34) focal; urgency=medium
     message and exit the upgrade process. (LP: #1924604)
   * DistUpgrade/DistUpgradeCache.py: switch to using finally in distUpgrade so
     that error messages in the above quirk will be visible.
+  * tests/test_sources_list.py: use distro_info to set releases when
+    performing some upgrade tests which fixes test failures when precise
+    was moved to old-releases.
 
  -- Brian Murray <brian@ubuntu.com>  Wed, 30 Jun 2021 17:08:44 -0700
 
