--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:20.04.34) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:20.04.34) focal; urgency=medium
 
   * DistUpgrade/DistUpgradeQuirks.py: If universe is not enabled and the
     upgrader is trying to transition from python to python2 produce an error
@@ -10,7 +10,7 @@ ubuntu-release-upgrader (1:20.04.34) UNRELEASED; urgency=medium
     was moved to old-releases.
   * Update mirrors, demotions, and translations.
 
- -- Brian Murray <brian@ubuntu.com>  Wed, 30 Jun 2021 17:08:44 -0700
+ -- Brian Murray <brian@ubuntu.com>  Thu, 01 Jul 2021 11:57:22 -0700
 
 ubuntu-release-upgrader (1:20.04.33) focal; urgency=medium
 
