--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:20.04.35) UNRELEASED; urgency=medium
+
+  * tests/test_sources_list.py: remove a port architecture test as the code
+    change has not been SRU'ed to 20.04.
+
+ -- Brian Murray <brian@ubuntu.com>  Fri, 02 Jul 2021 16:15:41 -0700
+
 ubuntu-release-upgrader (1:20.04.34) focal; urgency=medium
 
   * DistUpgrade/DistUpgradeQuirks.py: If universe is not enabled and the
