releasing package ubuntu-release-upgrader version 1:20.04.35

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-ubuntu-release-upgrader (1:20.04.35) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:20.04.35) focal; urgency=medium
 
   * tests/test_sources_list.py: remove a port architecture test as the code
     change has not been SRU'ed to 20.04.
 
- -- Brian Murray <brian@ubuntu.com>  Fri, 02 Jul 2021 16:15:41 -0700
+ -- Brian Murray <brian@ubuntu.com>  Fri, 02 Jul 2021 16:51:29 -0700
 
 ubuntu-release-upgrader (1:20.04.34) focal; urgency=medium
 
