Allow upgrades on Apple systems again (LP: #1934650)
Revert "DistUpgradeQuirks.py: only block upgrades for Apple hardware not all hardware that doesn't have DMI information. Thanks to Alyssa Rowan for the patch. (LP: #1931112)"

This reverts commit a48c3f42f6fa926775238867889d368202b34bf8.

Revert "DistUpgradeQuirks.py: If the system vendor is Apple do not allow release upgrades to 21.04 for the time being. (LP: #1929449)"

This reverts commit 542d5e71644e25e7b60e74193cf408c74bd2d2ef.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-release-upgrader (1:21.04.14) UNRELEASED; urgency=medium
+
+  * Allow upgrades on Apple systems again (LP: #1934650)
+
+ -- Julian Andres Klode <juliank@ubuntu.com>  Mon, 05 Jul 2021 10:51:18 +0200
+
 ubuntu-release-upgrader (1:21.04.13) hirsute; urgency=medium
 
   * tests/test_sources_list.py: switch from precise to focal (for ports too!)
