releasing package ubuntu-release-upgrader version 1:21.04.14

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-ubuntu-release-upgrader (1:21.04.14) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:21.04.14) hirsute; urgency=medium
 
   * Allow upgrades on Apple systems again (LP: #1934650)
 
- -- Julian Andres Klode <juliank@ubuntu.com>  Mon, 05 Jul 2021 10:51:18 +0200
+ -- Julian Andres Klode <juliank@ubuntu.com>  Mon, 05 Jul 2021 10:56:42 +0200
 
 ubuntu-release-upgrader (1:21.04.13) hirsute; urgency=medium
 
