tests/test_sources_list.py: use distro_info to set releases when performing some upgrade tests which fixes test failures when precise was moved to old-releases, additionally fix some tests for ports.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+ubuntu-release-upgrader (1:21.04.15) UNRELEASED; urgency=medium
+
+  * tests/test_sources_list.py: use distro_info to set releases when
+    performing some upgrade tests which fixes test failures when precise
+    was moved to old-releases, additionally fix some tests for ports.
+
+ -- Brian Murray <brian@ubuntu.com>  Fri, 09 Jul 2021 08:25:36 -0700
+
 ubuntu-release-upgrader (1:21.04.14) hirsute; urgency=medium
 
   * Allow upgrades on Apple systems again (LP: #1934650)
