--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:21.10.5) UNRELEASED; urgency=medium
+
+  * check-new-release-gtk: use gi.require_version('Gtk', '3.0') to ensure we
+    load the right version. (LP: #1936698)
+
+ -- Brian Murray <brian@ubuntu.com>  Fri, 16 Jul 2021 15:41:47 -0700
+
 ubuntu-release-upgrader (1:21.10.4) impish; urgency=medium
 
   * DistUpgrade/DistUpgradeQuirks.py: log a message when we encounter an
