--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-ubuntu-release-upgrader (1:21.10.5) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:21.10.5) impish; urgency=medium
 
   * check-new-release-gtk: use gi.require_version('Gtk', '3.0') to ensure we
     load the right version. (LP: #1936698)
   * Run pre-build.sh: updating mirrors, demotions, and translations.
 
- -- Brian Murray <brian@ubuntu.com>  Fri, 16 Jul 2021 15:44:44 -0700
+ -- Brian Murray <brian@ubuntu.com>  Fri, 16 Jul 2021 16:01:02 -0700
 
 ubuntu-release-upgrader (1:21.10.4) impish; urgency=medium
 
