releasing package ubuntu-release-upgrader version 1:21.04.15

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:21.04.15) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:21.04.15) hirsute; urgency=medium
 
   * check-new-release-gtk: use gi.require_version('Gtk', '3.0') to ensure we
     load the right version. (LP: #1936698)
@@ -7,7 +7,7 @@ ubuntu-release-upgrader (1:21.04.15) UNRELEASED; urgency=medium
     was moved to old-releases, additionally fix some tests for ports.
   * Run pre-build.sh: updating mirrors, demotions, and translations.
 
- -- Brian Murray <brian@ubuntu.com>  Mon, 19 Jul 2021 13:54:39 -0700
+ -- Brian Murray <brian@ubuntu.com>  Mon, 19 Jul 2021 14:38:57 -0700
 
 ubuntu-release-upgrader (1:21.04.14) hirsute; urgency=medium
 
