--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:21.10.6) UNRELEASED; urgency=medium
+
+  * DistUpgrade/ReleaseAnnouncement, DistUpgrade/EOLReleaseAnnouncement:
+    Update the irc channel server reference to Libera.Chat (LP: #1937852)
+
+ -- Brian Murray <brian@ubuntu.com>  Fri, 23 Jul 2021 09:56:16 -0700
+
 ubuntu-release-upgrader (1:21.10.5) impish; urgency=medium
 
   * check-new-release-gtk: use gi.require_version('Gtk', '3.0') to ensure we
