--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:21.04.16) UNRELEASED; urgency=medium
+
+  * DistUpgrade/ReleaseAnnouncement, DistUpgrade/EOLReleaseAnnouncement:
+    Update the irc channel server reference to Libera.Chat (LP: #1937852)
+
+ -- Brian Murray <brian@ubuntu.com>  Mon, 26 Jul 2021 13:05:01 -0700
+
 ubuntu-release-upgrader (1:21.04.15) hirsute; urgency=medium
 
   * check-new-release-gtk: use gi.require_version('Gtk', '3.0') to ensure we
